k8s/executor-cpp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpp-executor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cpp-executor
  template:
    metadata:
      labels:
        app: cpp-executor
    spec:
      containers:
      - name: cpp-executor
        image: harshithd/sentinel-executor-cpp:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "1"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "1Gi"
