k8s/executor-go.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-executor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-executor
  template:
    metadata:
      labels:
        app: go-executor
    spec:
      containers:
      - name: go-executor
        image: harshithd/sentinel-executor-go:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "1"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "1Gi"
