k8s/executor-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-executor
spec:
  replicas: 4
  selector:
    matchLabels:
      app: java-executor
  template:
    metadata:
      labels:
        app: java-executor
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: java-executor
        image: harshithd/sentinel-executor-java:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            cpu: "500m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
