k8s/executor-python.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-executor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-executor
  template:
    metadata:
      labels:
        app: python-executor
    spec:
      runtimeClassName: gvisor
      securityContext:
        seccompProfile:
          type: Localhost
          localhostProfile: seccomp-profile.json
      containers:
      - name: python-executor
        image: harshithd/sentinel-executor-python:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            cpu: "500m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
