k8s/executor-rust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-executor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-executor
  template:
    metadata:
      labels:
        app: rust-executor
    spec:
      containers:
      - name: rust-executor
        image: harshithd/sentinel-executor-rust:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
