k8s/executor-typescript.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: typescript-executor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: typescript-executor
  template:
    metadata:
      labels:
        app: typescript-executor
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: typescript-executor
        image: harshithd/sentinel-executor-typescript:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            cpu: "500m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
